<resources>
    <string name="app_name">Hey Driver</string>
    <string name="string_start_app">Starting the application...</string>
    <string name="string_sync_info">Synchronizing information...</string>
    <string name="tv_startup_welcome">Welcome to Hey Driver</string>
    <string name="tv_startup_message">Find out what\'s happening in your car</string>
    <string name="string_email">Email</string>
    <string name="string_password">Password</string>
    <string name="string_confirmpwd">Confirm password</string>
    <string name="string_username">Username</string>
    <string name="string_firstname">First name</string>
    <string name="string_lastname">Last name</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_log_in">Log in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_start_data">Read Sensors</string>
    <string name="button_stop_data">Stop</string>
    <string name="button_register">Sign up</string>
    <string name="welcome_message">Welcome to Hey Driver</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_characters_password">The password cannot contain spaces or any other special characters differents than @._-</string>
    <string name="error_special_char">This field cannot contain special characters</string>
    <string name="error_invalid_space_char">This field cannot contain special characters or spaces</string>
    <string name="error_starts_with_space">This field cannot start with a space</string>
    <string name="error_invalid_username">This field cannot have spaces or other special characters differents than @._-</string>
    <string name="error_matching_passwords">The passwords does not match</string>
    <string name="error_incorrect_login">The email or password you entered is not valid</string>
    <string name="error_username_taken">The username have been already taken</string>
    <string name="error_email_taken">The email have been already taken</string>
    <string name="error_cant_signup">There was a trouble with your registration, please try again</string>
    <string name="error_bad_communication">There was a trouble with the communication with our servers. Please try again</string>
    <string name="operation_cancelled">The operation has been cancelled</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_sign_up">User registration</string>
    <string name="title_fragment_home">Home</string>
    <string name="menu_OBDII_scanning">OBD-II Scanning</string>
    <string name="menu_vehicle_registration">Vehicle Registration</string>
    <string name="title_fragment_trouble_codes">Trouble Codes</string>
    <string name="menu_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="error_not_selected_car">No vehicle has been selected for scanning</string>
    <string name="error_obd_active">Cannot synchronize information while the OBDII is scanning</string>
    <string name="title_fragment_car_registration">Car Registration</string>
    <string name="title_fragment_car_selection">Car Selection</string>
    <string name="deleted_vehicle">You have successfully deleted the vehicle</string>
    <string name="selected_vehicle">You have already selected a vehicle</string>
    <string name="year">Year:</string>
    <string name="string_serial">Serial</string>
    <string name="string_brand">Brand</string>
    <string name="string_model">Model</string>
    <string name="string_year">Year</string>
    <string name="button_add_car">Add vehicle</string>
    <string name="error_year_rank">The fabrication year should be between 1900 and 2150</string>
    <string name="error_serial_lenght">The serial number should have 17 characters</string>
    <string name="error_duplicated_car">The serial number you are trying to register is already registered</string>
    <string name="added_car_succesfully">The vehicle has been added succesfully</string>
    <string name="no_vehicles">You have not registered an vehicles</string>
    <string name="string_car_tc">"Model: "</string>
    <string name="string_serial_tc">"Serial: "</string>
    <string name="string_trouble_tc">"Trouble Code: "</string>
    <string name="string_zone_tc">"Zone: "</string>
    <string name="string_desc_tc">"Description: "</string>
    <string name="title_fragment_obd_reader">OBD-II Scanning</string>
    <string name="unknown_obd_code">Unknown error code. Please consult an expert</string>
    <string name="no_internet_error">The extracted data could not be synchronized, it will be synchronized in the next scan, when the application is opened again or it can be done manually</string>
    <string name="action_clear_codes">Clear Codes</string>
    <string name="notification_action">Tap to open OBD-Reader</string>
    <string name="command_list">Choose a command</string>
    <string name="service_starting">Starting OBD connection..</string>
    <string name="service_started">OBD connection has started.</string>
    <string name="service_stopped">OBD connection has stopped.</string>
    <string name="notification_label">Tap to open OBD-Reader.</string>
    <string name="pref_upload_category_title">Data Upload</string>
    <string name="pref_upload_category" translatable="false">upload_category</string>
    <string name="title_activity_trips_list">TripsList</string>
    <string name="menu_item_trip_delete">Delete</string>
    <string name="pref_gps_category" translatable="false">gps_category</string>
    <string name="dialog_loading_title">Loading…</string>
    <string name="dialog_loading_body">Loading application View, please wait…</string>
    <string name="menu_start_live_data">Start Live Data</string>
    <string name="menu_stop_live_data">OBD-II reader stopped</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_get_dtc">Get DTC</string>
    <string name="text_gps" translatable="false">GPS</string>
    <string name="text_obd" translatable="false">OBD</string>
    <string name="text_bluetooth" translatable="false">Bluetooth</string>
    <string name="text_orientation_default" translatable="false">N</string>
    <string name="text_zero" translatable="false">0</string>
    <string name="text_consumption_default" translatable="false">0l/100km</string>
    <string name="text_runtime_default" translatable="false">00:00:00</string>
    <string name="title_pref_obd">OBD Preferences</string>
    <string name="title_pref_commands">OBD Commands</string>
    <string name="title_pref_bluetooth" translatable="false">Bluetooth</string>
    <string name="title_pref_gps" translatable="false">GPS</string>
    <string name="text_no_bluetooth_id">Sorry, your device doesn\'t support Bluetooth</string>
    <string name="text_bluetooth_disabled">You have Bluetooth disabled. Please enable it (using Mock service)</string>
    <string name="text_bluetooth_nodevice">No Bluetooth device selected</string>
    <string name="text_bluetooth_error_connecting">Cannot connect to bluetooth device!</string>
    <string name="text_no_orientation_sensor">Orientation sensor missing?</string>
    <string name="text_no_gps_support">Sorry, your device doesn\'t support or has disabled GPS.</string>
    <string name="text_save_trip_not_available">Sorry, trip will not be saved.</string>
    <string name="text_obd_command_failure">OBD command failure!</string>
    <string name="text_dtc_no_data">No DTC stored</string>
    <string name="status_no_bluetooth_id">unavailable</string>
    <string name="status_bluetooth_disabled">disabled</string>
    <string name="status_bluetooth_ok">ready</string>
    <string name="status_bluetooth_connecting">connecting&#8230;</string>
    <string name="status_bluetooth_connected">connected</string>
    <string name="status_bluetooth_error_connecting">connection failed</string>
    <string name="status_gps_fix">fix acquired</string>
    <string name="status_gps_no_fix">fix not acquired</string>
    <string name="status_gps_started">started</string>
    <string name="status_gps_stopped">stopped</string>
    <string name="status_gps_ready">ready</string>
    <string name="status_gps_no_support">not available</string>
    <string name="status_gps_not_used">not used</string>
    <string name="status_obd_ready">OK</string>
    <string name="status_obd_data">receiving data&#8230;</string>
    <string name="status_obd_disconnected">disconnected</string>
    <string name="status_obd_no_support">NA</string>
    <string name="pref_upload_title">Enable Data Upload</string>
    <string name="pref_upload_summaryOff">Enable http data upload</string>
    <string name="pref_upload_summaryOn">Disable http data upload</string>
    <string name="pref_upload_url_title">Upload URL</string>
    <string name="pref_upload_url_summary">POST URL that will accept real-time data</string>
    <string name="pref_vehicle_id_title">Vehicle ID</string>
    <string name="pref_vehicle_id_summary">Optional unique id of this vehicle, used with uploaded data</string>
    <string name="pref_bluetooth_title">Enable Bluetooth</string>
    <string name="pref_bluetooth_summaryOff">Turn on Bluetooth</string>
    <string name="pref_bluetooth_summaryOn">Turn off Bluetooth</string>
    <string name="pref_bluetooth_list_devices_summary">List of paired bluetooth devices.</string>
    <string name="pref_bluetooth_list_devices_title">Bluetooth Devices</string>
    <string name="pref_gps_category_title">Enable GPS</string>
    <string name="pref_gps_category_summaryOff">Turn on GPS</string>
    <string name="pref_gps_category_summaryOn">Turn off GPS</string>
    <string name="pref_gps_update_period_title">Update Period in Seconds</string>
    <string name="pref_gps_update_period_summary">The length of time between querying new position in seconds</string>
    <string name="pref_gps_distance_period_title">Update Period in Meters</string>
    <string name="pref_gps_distance_period_summary">Min Distance between location updates, in meters</string>
    <string name="pref_obd_protocols_title">OBD Protocol</string>
    <string name="pref_obd_protocols_summary">Select OBD Protocol to use</string>
    <string name="pref_imperial_units_title">Imperial Units</string>
    <string name="pref_imperial_units_summaryOff">Enable imperial units</string>
    <string name="pref_imperial_units_summaryOn">Go back to metric units</string>
    <string name="pref_obd_update_period_title">Update Period in Seconds</string>
    <string name="pref_obd_update_period_summary">The length of time between querying vehicle data in seconds</string>
    <string name="pref_max_fuel_econ_title">Maximum Fuel Economy Value</string>
    <string name="pref_max_fuel_econ_summary">Any fuel economy values larger than this will be thrown out</string>
    <string name="pref_volumetric_efficiency_dialog_title">Volumetric Efficiency (eg 0.85)</string>
    <string name="pref_volumetric_efficiency_summary">Used for fuel economy on vehicles without MAF sensor</string>
    <string name="pref_volumetric_efficiency_title">Volumetric Efficiency</string>
    <string name="pref_engine_displacement_title">Engine Displacement (liters)</string>
    <string name="pref_engine_displacement_summary">Used for fuel economy on vehicles without MAF sensor</string>
    <string name="pref_reader_config_title">Reader Config Commands</string>
    <string name="menu_trouble_codes">Trouble Codes</string>
    <string name="menu_smart_test">Smart Test</string>
    <string name="menu_synchronize">Synchronize</string>
    <string name="menu_predictions">Predictive Reports</string>
    <string name="menu_ubication">Harmful roads</string>
</resources>