<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_carregistration"
            android:icon="@drawable/ic_menu_car"
            android:title="@string/menu_vehicle_registration" />
        <item
            android:id="@+id/nav_obdIIscanning"
            android:icon="@drawable/ic_menu_obd"
            android:title="@string/menu_OBDII_scanning" />
        <item
            android:id="@+id/nav_trouble_codes"
            android:icon="@drawable/ic_menu_troubles"
            android:title="@string/menu_trouble_codes" />
        <item
            android:id="@+id/nav_predictions"
            android:icon="@drawable/ic_menu_prediction"
            android:title="@string/menu_predictions" />
        <item
            android:id="@+id/nav_ubications"
            android:icon="@drawable/ic_menu_ubication"
            android:title="@string/menu_ubication" />
    </group>

    <item android:title="@string/menu_smart_test">
        <menu>
            <item
                android:id="@+id/nav_sync"
                android:icon="@drawable/ic__menu_sync"
                android:title="@string/menu_synchronize" />
        </menu>
    </item>

</menu>
