<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/heyDriverDarkSlateGray"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.heydriver.heydriver.controller.activities.StartUpActivity"
    android:weightSum="1">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:adjustViewBounds="false"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/heydriver_white_logo" />

    <TextView
        android:id="@+id/tv_startup_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_startup_welcome"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tv_startup_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginTop="10dp"
        android:layout_row="1"
        android:layout_weight="0.31"
        android:text="@string/tv_startup_message"
        android:textColor="@color/white"
        android:textSize="25dp" />

    <Button
        android:id="@+id/btn_su_sign_up"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@color/heyDriverLightGreen"
        android:text="@string/button_sign_up"
        android:textColor="@android:color/white"
        android:textSize="14dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_su_sign_in"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/heyDriverDarkGreen"
        android:text="@string/button_log_in"
        android:textColor="@android:color/white"
        android:textSize="14dp"
        android:textStyle="bold" />

</LinearLayout>
